@@ -17,6 +17,7 @@ Version 0.3i
  - PC dom, PC fucks ass. Written together with LD/QB.
  - PC dom, PC anal ride. Written by LD/QB.
 * Added a new onetime encounter with a female ferret at the Maidens' Bane tavern. Written by Reaper.
+* Added a repeatable sex option to Miranda at the bar. Open after the first date, leads to the same scenes as the dates.
 
 --------------------------------------------
              PREVIOUS VERSIONS
